objects/Sample_Trtansaction__c.object
<CustomObject><fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Expiration_month__c</fullName>
        <label>Expiration month</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Expiration_year__c</fullName>
        <label>Expiration year</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <length>100</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Sample Trtansaction</label><nameField>
        <label>Sample Trtansaction Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Sample Trtansactions</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>